--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Контакты</a>
+                <a class="nav-link" href="#contact" tabindex="-1" aria-disabled="true">Контакты</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -269,7 +269,7 @@
       </div>
     </div>
 
-<div class="container ">
+<div class="container " id="contact">
     <h1 class="text-center mt-5 mb-5">
         Контакты
     </h1>
